tests/NormalTests/paczka1/small_fuzzy/67137769.err
Error in line 3: u1E2 S532 64,0
Error in line 2: g6wacaaZ6J S576 77,3
Error in line 10: g6wacaaZ6J S749 69,7
